Implementación completa de autenticación JWT con Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.servlet.multipart.max-request-size=5MB
 app.upload.dir=${user.home}/sabores-api-uploads
 
 # ===================================
-# CONFIGURACIÓN JWT (lo usaremos después)
+# CONFIGURACIÓN JWT
 # ===================================
 jwt.secret=miClaveSecretaSuperSegura123456789012345678901234567890
 jwt.expiration=86400000
