--- a/pom.xml
+++ b/pom.xml
@@ -107,12 +107,20 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
+					<source>17</source>
+					<target>17</target>
+					<release>17</release>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 						</path>
 					</annotationProcessorPaths>
+					<compilerArgs>
+						<arg>-Xlint:all</arg>
+						<arg>-Xlint:-deprecation</arg>
+						<arg>-Xlint:-processing</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
